
version 0.5, 22/11/2002
=======================
 o from_list now fails on negative indexes (patch from Karl Zilles)
 o from_list_with_length to specify the length (patch from Karl Zilles)

version 0.4, 29/8/2002
======================
 o to_list/from_list to convert to/from lists of integers
 o added gray_iter to iterate over all bit vectors of length n
 o configuration with autoconf

version 0.3, 31/5/2000
======================
 o fixed bug in bw_not thanks to Damir Jamsek

version 0.2, 24/4/2000
======================
 o normalization, so that generic equality can be used
 o efficient implementations of append, sub, blit, concat and fill
 o documentation using ocamlweb
 o to_string, from_string
 o bitwise operations, all_zeros

version 0.1
===========
 o first release